# single-task-runner

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: single-task-runnerConfig.cmake.in
include/single-task-runner/: runner.hpp
src/: runner.cpp
test/: runner_test.cpp
